rename the mod for I am a fool

--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,6 @@ build_number=2
 mc_version=1.10.2
 jei_version=1.9.4:3.4.0.202
 forge_version=12.18.0.2007-1.10.0
-mod_name=Similactics
+mod_name=Silimatics
 mc_mappings=snapshot_20160703
-group=wiresegal.similactics
+group=wiresegal.silimatics
