Added TheOneProbe & Waila

--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,8 @@ mc_version=1.10.2
 jei_version=1.9.4:3.4.0.202
 forge_version=12.18.0.2007-1.10.0
 guideapi_version=1.9.4-2.0.0-38
+theoneprobe_version=1.9.4-1.0.6-17
+waila_version=1.7.0-B3_1.9.4
 mod_name=Silimatics
 mc_mappings=snapshot_20160703
 group=wiresegal.silimatics
