--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,20 @@ repositories {
         url 'http://tehnut.info/maven/'
     }
 }
+repositories {
+    maven { // TOP
+        name 'tterrag maven'
+        url "http://maven.tterrag.com/"
+    }
+}
+repositories {
+    maven {
+        url "http://mobiusstrip.eu/maven"
+    }
+    maven {
+        url "http://chickenbones.net/maven/"
+    }
+}
 
 configurations {
 
@@ -64,6 +78,8 @@ configurations {
 dependencies {
     deobfCompile "mezz.jei:jei_${config.jei_version}"
     deobfCompile "info.amerifrance.guideapi:Guide-API:${config.guideapi_version}"
+    deobfCompile "mcjty.theoneprobe:TheOneProbe:${config.theoneprobe_version}"
+    compile "mcp.mobius.waila:Waila:${config.waila_version}"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     required "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
