--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@ version=1
 build_number=1.1
 mc_version=1.10.2
 jei_version=1.9.4:3.4.0.202
-forge_version=12.18.0.2007-1.10.0
+forge_version=12.18.1.2053
 guideapi_version=1.9.4-2.0.0-38
 theoneprobe_version=1.9.4-1.0.6-17
 waila_version=1.7.0-B3_1.9.4
