--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ repositories {
     maven {
         url "http://chickenbones.net/maven/"
     }
+    maven { url "https://jitpack.io" }
 }
 
 configurations {
@@ -69,6 +70,8 @@ dependencies {
     compile "mcp.mobius.waila:Waila:${config.waila_version}"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     required "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.github.TeamWizardry:TMT-Refraction:-SNAPSHOT'
+
 }
 
 jar {
