--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     deobfCompile "mezz.jei:jei_${config.jei_version}"
     compile "mcp.mobius.waila:Waila:${config.waila_version}"
     compile 'com.github.TeamWizardry:LibrarianLib:-SNAPSHOT'
+    compile 'com.github.shadowfacts:Forgelin:-SNAPSHOT'
 
 }
 
