Fix liblib, done with cymatic plate, fix communicator & scholar glass, fix panes, add showstopper lens, transporter's glass (NYI) and linker's glass

--- a/build.gradle
+++ b/build.gradle
@@ -71,8 +71,8 @@ configurations {
 
 dependencies {
     deobfCompile "mezz.jei:jei_${config.jei_version}"
-    compile "mcp.mobius.waila:Waila:${config.waila_version}"
-    compile 'com.github.TeamWizardry:LibrarianLib:-SNAPSHOT'
+    /*compile "mcp.mobius.waila:Waila:${config.waila_version}"*/
+    /*compile 'com.github.TeamWizardry:LibrarianLib:-SNAPSHOT'*/
     compile 'com.github.shadowfacts:Forgelin:-SNAPSHOT'
 
 }
